--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ num-bigint = { version = "0.4", optional = true, default-features = false, featu
 num-complex = { version = "0.4", optional = true, default-features = false, features = ["std"] }
 serde = { version = "1.0", optional = true, default-features = false }
 typenum = "1.13"
+paste = "1.0.15"
 
 [dev-dependencies]
 approx = "0.5"
